Working version using API 1.0. A few layout issues remain, due to the new controls

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,9 +1,11 @@
 html {
   background-image: url('/assets/gplaypattern.png');
+    margin-top: 0;
 }
 
 body {
   background: transparent;
+  margin-top: 0;
 }
 
 div, h1, h2 {
@@ -35,14 +37,21 @@ div, h1, h2 {
 .brandbar {
   background-image: url('/assets/header.jpg');
   background-size: 800px 92px;
+  width: 300px;
+  height: 60px;
+  margin: 0 auto;
+
+  box-shadow:0px 1px 1px rgba(255,255,255,0.8) 1px 1px 3px rgba(0,0,0,0.2);
+  border-radius:0px 0px 4px 4px;
+  transition:box-shadow 0.3s ease-in-out;
 }
 
 .brandbar > h1 {
   display: inline-block;
-  padding-top: 10px;
+  padding-top: 5px;
   font-size: 30px;
   color: #e2e2e2;
-  text-shadow: 0px 1px 1px #4d4d4d;
+  text-shadow: 0px 0px 1px #4d4d4d;
 }
 
 #stagesList {
@@ -124,19 +133,11 @@ h2 {
 
 }
 
-.brandbar {
-  width: 300px;
-  margin: 0 auto;
-
-  box-shadow:0px 1px 1px rgba(255,255,255,0.8) inset, 1px 1px 3px rgba(0,0,0,0.2);
-  border-radius:0px 0px 4px 4px;
-  transition:box-shadow 0.3s ease-in-out;   
-}
-
 /* Spotify overrides */
 
 .sp-list {
   width: 600px;
+  height: 300px;
 }
 
 .sp-item > .sp-track-field-star {
@@ -149,5 +150,5 @@ h2 {
 
 /* overriding adam/eve.css */
 .sp-list a > :nth-child(2) {
-width: 250px;
+/*width: 250px;*/
 }
